--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "Prospective Employers...", welcome_prospectives_path %></li>
         <li><%= link_to "Coding Portfolio", welcome_portfolio_path %></li>
-        <li><%= link_to "Musings", welcome_musings_path %></li>
+        <!-- <li> link_to "Musings", welcome_musings_path </li> -->
       </ul>
   </nav>
 
