--- a/app/views/welcome/prospectives.html.erb
+++ b/app/views/welcome/prospectives.html.erb
@@ -84,8 +84,10 @@
       <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
         <div class="panel-body">
           The resume. A necessary but limited view of a person.
-          Feel free to take a copy for review at your liesure. </br>
-          Resume Link
+          Feel free to take a copy for review at your leisure. </br>
+          <%= link_to "Resume",
+          "https://s3.amazonaws.com/resume-oliphant-portfolio/OliphantResumev2.pdf",
+          :target => "_blank" %>
         </div>
       </div>
     </div>
