--- a/app/views/welcome/prospectives.html.erb
+++ b/app/views/welcome/prospectives.html.erb
@@ -5,7 +5,7 @@
         <h4 class="panel-title">
           <a data-toggle="collapse" data-parent="#accordion"
           href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Short Form Personal Statement
+          A little about me
           </a>
         </h4>
       </div>
@@ -29,7 +29,7 @@
         <h4 class="panel-title">
           <a class="collapsed" data-toggle="collapse" data-parent="#accordion"
           href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Long Form Personal Statement
+          A lot about me
           </a>
         </h4>
       </div>
@@ -38,7 +38,7 @@
         <div class="panel-body">
           Every now and then I need a new challenge. If I can’t find it where I am,
           I seek one out. Learning Ruby on Rails marks the start of my next set of challenges.
-          THIS SENTENCE I have switched careers to seek satisfaction by working on projects
+          I have switched careers to seek satisfaction by working on projects
           that affect large audiences, all the while learning more to increase my depth of
           knowledge. A little javascript, perhaps? Maybe a deep dive on SQL?</br></br>
           A long path begins with a single step, and that is where I currently am.
