--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container georg-serif">
   <div class = "media-header">
     <h3>a portfolio haiku</h3>
     <body class="media-body text-center">
