--- a/app/views/welcome/portfolio.html.erb
+++ b/app/views/welcome/portfolio.html.erb
@@ -1,6 +1,6 @@
 
 
-<div class="container col-md-8 col-md-offset-2">
+<div class="container col-md-8 col-md-offset-2 georg-serif">
   <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
     <div class="panel panel-default">
       <div class="panel-heading" role="tab" id="headingOne">
