--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default georg-serif">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="about">Welcome</a>
