--- a/app/views/welcome/prospectives.html.erb
+++ b/app/views/welcome/prospectives.html.erb
@@ -1,4 +1,4 @@
-<div class="container col-md-8 col-md-offset-2">
+<div class="container col-md-8 col-md-offset-2 georg-serif">
   <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
     <div class="panel panel-default">
       <div class="panel-heading" role="tab" id="headingOne">
@@ -45,7 +45,7 @@
           I seek to further develop my skills through practical application. Real problems
           and real responsibilities are by far the best teachers. Once I am a strong
           contributor as a web developer, my desire is to lead development teams. I have
-          seen the benefits first hand of tackling large problems as a team that doing so
+          seen the benefits first hand of tackling large problems as a team, and now doing so
           will always be a part of my goals.</br></br>
           My long term interests lie in the inevitable collision of robotics and the web.
           Research and creation in the robotics field is on the verge of something great,
