--- a/app/views/welcome/portfolio.html.erb
+++ b/app/views/welcome/portfolio.html.erb
@@ -73,6 +73,7 @@
         <div class="panel-body">
           <%= link_to "Blocitoff", "https://doliphant-blocitoff.herokuapp.com",
            :target => "_blank"  %></br>
+           Test User: portfolio@example.com, pw: portfolio</br>
            <%= link_to "Github: Blocitoff", "https://github.com/doliphant/blocitoff",
            :target => "_blank" %></br>
            My first project. A self destructing to do list.
