--- a/app/views/welcome/prospectives.html.erb
+++ b/app/views/welcome/prospectives.html.erb
@@ -44,7 +44,7 @@
           A long path begins with a single step, and that is where I currently am.
           I seek to further develop my skills through practical application. Real problems
           and real responsibilities are by far the best teachers. Once I am a strong
-          contributor as a web developer, my desire is to lead development teams. I have
+          contributor as a developer, my desire is to lead development teams. I have
           seen the benefits first hand of tackling large problems as a team, and now doing so
           will always be a part of my goals.</br></br>
           My long term interests lie in the inevitable collision of robotics and the web.
