--- a/app/views/welcome/portfolio.html.erb
+++ b/app/views/welcome/portfolio.html.erb
@@ -2,6 +2,7 @@
 
 <div class="container col-md-8 col-md-offset-2 georg-serif">
   <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+
     <div class="panel panel-default">
       <div class="panel-heading" role="tab" id="headingOne">
         <h4 class="panel-title">
@@ -47,6 +48,7 @@
            :target => "_blank"  %></br>
            <%= link_to "Github: Blocipedia", "https://github.com/doliphant/blocipedia",
            :target => "_blank" %></br>
+           Test Users: premium@example.com, public@example.com. pw: portfolio</br>
            My second project with <%= link_to "Bloc.io", "https://www.bloc.io",
            :target => "_blank" %>.
            This is where things started to click for me.
@@ -73,9 +75,10 @@
         <div class="panel-body">
           <%= link_to "Blocitoff", "https://doliphant-blocitoff.herokuapp.com",
            :target => "_blank"  %></br>
-           Test User: portfolio@example.com, pw: portfolio</br>
            <%= link_to "Github: Blocitoff", "https://github.com/doliphant/blocitoff",
            :target => "_blank" %></br>
+           Test User: portfolio@example.com. pw: portfolio</br>
+
            My first project. A self destructing to do list.
            Not much to look at, but my first foray without an explicit blueprint to follow.
            Even so, most of the code is focused on using the small
@@ -86,5 +89,32 @@
         </div>
       </div>
     </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading" role="tab" id="headingFour">
+        <h4 class="panel-title">
+          <a class="collapsed" data-toggle="collapse" data-parent="#accordion"
+          href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+            Open Source Contributions
+          </a>
+        </h4>
+      </div>
+      <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+        <div class="panel-body">
+          I've started reviewing open source projects to get some real world experience.
+          I'm getting to know a few projects and have not yet made any contributions, but hope to
+          fill this space soon. I'm focusing on documentation to get familar with the process and
+          contribution guidelines, but will take on any code I can tackle if it comes my way.</br>
+          So why create an empty space that hightlights my lack of contributions?</br></br>
+          To show that I am not afraid to make a commitment and follow through.
+          Check back soon!</br>
+          Currently following: </br>
+          <%= link_to "gitlab", "https://github.com/gitlabhq/gitlabhq", :target => "_blank" %></br>
+          <%= link_to "NeoVim", "http://neovim.org/", :target => "_blank" %></br>
+          <%= link_to "CodeCombat", "https://codecombat.com/", :target => "_blank" %>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>
