--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <nav class="navbar navbar-default georg-serif">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="about">Welcome</a>
+        <a class="navbar-brand" href="welcome/about">Welcome</a>
       </div>
 
       <ul class="nav navbar-nav">
