grammar and link

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -3,7 +3,7 @@
     <h3>a portfolio haiku</h3>
     <body class="media-body text-center">
       a portfolio</br>
-      is to but glimpse a person</br>
+      is but to glimpse a person</br>
       so please do not blink.</br>
     </body>
   </div>
